# tutorial

./: .clang-format  CMakeLists.txt  haxer.files  haxer.includes
ekxperiment/: main.cpp  run
haxer/moneyManagement/: MoneyManager.cpp  MoneyManager.hpp
